advanced filtering with language and fixing bugs

--- a/assets/translations/am-ET.json
+++ b/assets/translations/am-ET.json
@@ -274,7 +274,7 @@
     "vases":"የአበባ ማስቀመጫዎች",
     "curtains":"መጋረጃዎች",
     "mirrors":"መስታወት",
-    "fleezers":"ማቀዝቀዣ",
+    "freezers":"ማቀዝቀዣ",
     "clocks":"ሰዓቶች",
     "refrigerators":"ማቀዝቀዣዎች",
     "blenders":"መቀላጠፊያዎች",
