--- a/assets/translations/en-ER.json
+++ b/assets/translations/en-ER.json
@@ -274,7 +274,7 @@
     "vases": "መቀመጢ ዕምበባ",
     "curtains": "መጋረጃታት",
     "mirrors": "መስትያት",
-    "fleezers": "ፍሊዘርስ",
+    "freezers": "ፍሪጅ",
     "clocks": "ሰዓታት",
     "refrigerators": "ፍሪጅ",
     "blenders": "ብሌንደርስ",
