--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -77,14 +77,10 @@
     "Category": "category",
     "Categories": "Categories",
     "Sub Categories": "Sub Categories",
-    "Truck": "Truck",
     "Heavy Equipment": "Heavy Equipment",
     "Samsung": "Samsung",
     "iphone": "Iphone",
-    "Nokia": "Nokia",
-    "Huawei": "Huawei",
     "Xiaomi": "Xiaomi",
-    "Tv": "Tv",
     "Video Cameras": "Video Cameras",
     "Laptops": "Laptops",
     "Desktops": "Desktops",
@@ -237,7 +233,6 @@
     "cables": "cables",
     "laptop cooler": "laptop cooler",
     "desktop computer": "desktop computer",
-    "laptop": "laptop",
     "server": "server",
     "laptopsandcomputers": "laptops and computers",
     "computeraccessory": "computer accessory",
@@ -264,7 +259,7 @@
     "tv stands and mounts": "tv stands and mounts",
     "chairs": "chairs",
     "cabinets and cupboards": "cabinets and cupboards",
-    "shoeracks": "shoeracks",
+    "shoeracks": "bakka kophee itti kaa’an",
     "flower pots": "flower pots",
     "pressure washers": "pressure washers",
     "plants": "plants",
@@ -276,9 +271,9 @@
     "vases": "vases",
     "curtains": "curtains",
     "mirrors": "mirrors",
-    "fleezers": "fleezers",
+    "freezers": "freezers",
     "clocks": "clocks",
-    "refrigerators": "refrigerators",
+    "refrigerators": "refrigerators",  
     "blenders": "blenders",
     "water dispensers": "water dispensers",
     "cookers": "cookers",
@@ -319,13 +314,8 @@
     "phone": "phone",
     "smartwatches": "smartwatches",
     "mobileaccessory": "mobile accessory",
-    "apartment": "apartment",
-    "House": "House",
-    "Condominium": "Condominium",
-    "Villa": "Villa",
     "ware house": "ware house",
     "complex": "complex",
-    "apartment": "apartment",
     "restaurant": "restaurant",
     "villa": "villa",
     "officespace": "officespace",
@@ -341,7 +331,6 @@
     "Bulfldozers": "Bulfldozers",
     "craneforks": "craneforks",
     "forklifts": "forklifts",
-    "isuzu": "isuzu",
     "backhoeloader": "backhoe loader",
     "hyundai": "hyundai",
     "toyota": "toyota",
@@ -350,35 +339,21 @@
     "mercedes-benz": "mercedes-benz",
     "renault": "renault",
     "sinotruck": "sinotruck",
-    "isuzu": "isuzu",
     "iveco": "iveco",
     "fiat": "fiat",
     "mitsubishi": "mitsubishi",
     "foton": "foton",
-    "Suzuki": "Suzuki",
     "dongfeng": "dongfeng",
     "Bajaj": "Bajaj",
     "TVS": "TVS",
     "Piaggio": "Piaggio",
     "Aprilia": "Aprilia",
     "Honda": "Honda",
-    "Hyundai": "Hyundai",
     "Yamaha": "Yamaha",
-    "Nissan": "Nissan",
-    "Suzuki": "Suzuki",
-    "Ford": "Ford",
-    "Volswagen": "Volswagen",
-    "Buses": "Buses",
     "HeavyEquipment": "HeavyEquipment",
     "Truck": "Truck",
-    "Toyota": "Toyota",
-    "Hyundai": "Hyundai",
-    "Suzuki": "Suzuki",
-    "Nissan": "Nissan",
-    "Ford": "Ford",
     "Mercedes Benz": "Mercedes Benz",
     "Volkswagen": "Volkswagen",
-    "cars": "Cars",
     "vehiclepartsandaccessories": "vehicleparts and accessories",
     "motorcycles": "motorcycles",
     "trucks": "trucks",
@@ -397,8 +372,8 @@
     "babies": "babies",
     "foodandagri": "food and agri",
     "jobs": "jobs",
-    "commercialequipment": "ሚሸጥ የንግድ ንብረት",
-    "construction": "ኮንስትራክሽን",
+    "commercialequipment": "commercialequipment",
+    "construction": "construction",
     "dogsandpuppies": "doggies and puppies",
     "birds": "birds",
     "cats": "cats",
@@ -480,3 +455,8 @@
     "South":"South",
     "Afar":"Afar"
 }
+
+
+
+
+
