new features added

--- a/assets/translations/en-ER.json
+++ b/assets/translations/en-ER.json
@@ -291,7 +291,7 @@
     "air coolers": "መዝሓሊ ኣየር",
     "furniture": "ኣቕሑ ገዛ",
     "homeappliances": "መሳርሒታት ገዛ",
-    "gardensupplies": "ናይ ጋርdደን ኣቕሑ",
+    "gardensupplies": "ናይ ጋርደን ኣቕሑ",
     "kitchensupplies": "ናይ ክሽነ ኣቕሑ",
     "householdchemicals": "ናይ ገዛ ኬሚካላት",
     "homeaccessories": "ናይ ገዛ መሳርሒታት",
@@ -321,7 +321,7 @@
     "restaurant": "ሬስቶራንት",
     "villa": "ቪላ",
     "officespace": "ናይ ቤት ጽሕፈት ቦታ",
-    "houseandapartmentforrent": "ዛን ኣፓርታማን ንኽራይ",
+    "houseandapartmentforrent": "ገዛን ኣፓርታማን ንኽራይ",
     "houseandapartmentforsale": "ቤት እና አፓርታማ ለሽያጭ",
     "landandplotsforsale": "መሬትን ስፍራታትን ንመሸጣ",
     "landandplotsforrent": "መሬትን ስፍራታትን ንክራይ",
@@ -455,6 +455,248 @@
    "Harar":"ሀረር",
    "Addis":"ኣዲስ",
    "South":"ደቡብ",
-   "Afar":"ዐፋር"
-   
+   "Afar":"ዐፋር",
+   "Posted by":"ዝለጠፈ ብ",
+   "More details":"ተወሳኺ ዝርዝር",
+   "category":"ምድብ",
+   "Model":"ሞዴል",
+   "transmission":"ምትሕልላፍ",
+   "engineSize":"ዓቐን ሞተር",
+   "Fuel":"ነዳዲ",
+   "Mile Age":"ዕድመ ማይልስ",
+   "color":"ሕብሪ",
+   "Manifacturing year":"ዓመተ ምፍራይ",
+   "Gallery":"ጋለሪ",
+   "images":"ስእልታት",
+   "villa":"ቪላ",
+   "apartment":"ኣፓርታማ",
+   "Change add status":"ኩነታት ምውሳኽ ምቕያር",
+   "Brand":"ብራንድ",
+   "Manifacturingyear":"ዓመተ ምፍራይ",
+   "pleaseentercolor":"በጃኻ ሕብሪ ኣእቱ",
+   "pleaseenteryear":"በጃኻ ዓመት ኣእትዉ",
+   "pleaseenterbrand":"በጃኻ ምልክት ኣእትዉ",
+   "Model":"ሞዴል",
+   "year":"ዓመት",
+   "color":"ሕብሪ",
+   "Grey":"ግራጭ",
+   "Black":"ጸሊም",
+   "White":"ጻዕዳ",
+   "Blue":"ሰማያዊ",
+   "Red":"ቀይሕ",
+   "Silver":"ብሩር",
+   "Green":"ቀጠልያ",
+   "Orange":"ኣራንሺ",
+   "Yellow":"ብጫ",
+   "toyota":"ቶዮታ",
+   "Avensis":"አቬንሲስ",
+   "Aygo":"ኣይጎ",
+   "bZ4X":"bZ4X",
+   "C-HR":"ሲ-ኤችኣር",
+   "Camry":"ካምሪ",
+   "Carina":"ካሪና",
+   "Celica":"ሴሊካ",
+   "Corolla":"ኮሮላ",
+   "GT86":"GT86",
+   "Hiace":"ሃያሴ",
+   "Hilux":"ሃይሉክስ",
+   "IQ":"ኣይኪዩ",
+   "Land Cruiser Series":"ላንድ ክሩዘር",
+   "MR2":"MR2",
+   "Previa":"ፕሪቪያ",
+   "Prius":"ፕሪዩስ",
+   "Prius +":"ፕሪዩስ +",
+   "Proace":"ፕሮኣስ",
+   "RAV4":"RAV4",
+   "Starlet":"ስታርለት",
+   "Supra":"ሱፕራ",
+   "Tundra":"ቱንድራ",
+   "Urban Cruiser":"ኣርባን ክሩዘር",
+   "Verso":"ቨርሶ",
+   "Verso-S":"ቨርሶ-ኤስ",
+   "Yaris":"ያሪስ",
+   "Other":"ካልእ",
+   "Amarok":"ኣማሮክ",
+   "Arteon":"ኣርቴዮን",
+   "Beetle":"ቢትል",
+   "Bora":"ቦራ",
+   "bubble":"ባብል",
+   "Caddy":"ካዲ",
+   "California":"ካሊፎርንያ",
+   "CC":"CC",
+   "Corrado":"ኮራዶ",
+   "Crafter":"ክራፍት",
+   "E-crafter":"ኢ-ክራፍት",
+   "e-UP":"ኢ-ኣፕ",
+   "Eos":"ኢኦስ",
+   "Fox":"ጎልፍ",
+   "Golf":"ጎልፍ",
+   "ID.3":"ኣይዲ .3",
+   "ID.4":"ኣይዲ .4",
+   "ID.5":"ኣይዲ .5",
+   "ID Buzz":"ኣይዲ ቡዝ",
+   "Jetta":"ጀታ",
+   "Lupo":"ሉፖ",
+   "Passed":"ፓስድ",
+   "Phaeton":"ፌቶን",
+   "Polo":"ፖሎ",
+   "Scirocco":"ስኪሮኮ",
+   "Sharan":"ሻራን",
+   "T-Cross":"ቲክሮስ",
+   "T-Roc":"ቲ-ሮክ",
+   "T5":"ቲ5",
+   "T6":"ቲ6",
+   "Taigo":"ታይጎ",
+   "Tiguan":"ቲጉዋን",
+   "Tiguan Allspace":"ቲጉዋን ኦልስፔስ",
+   "Touareg":"ቱዋረግ",
+   "Touran":"ቱራን",
+   "Caravelle":"ካራቨል",
+   "Up":"ኣፕ",
+   "Vento":"ቬንቶ",
+   "Accent":"ኣክሰንት",
+   "Atos":"ኣቶስ",
+   "Bayon":"ባዮን",
+   "Coupé":"ኩፐ",
+   "Elantra":"ኤላንትራ",
+   "Getz":"ጌትዝ",
+   "Grandeur":"ግራንዱር",
+   "H-1":"ኤች-1",
+   "i10":"ኣይ10",
+   "i20":"ኣይ20",
+   "i30":"ኣይ30",
+   "i40":"ኣይ40",
+   "Ioniq":"ኢዮኒቅ",
+   "Ioniq 5":"ኢዮኒቅ 5",
+   "ix20":"ኣይኤክስ20",
+   "ix35":"ኣይኤክስ35",
+   "Kona":"ኮና",
+   "Matrix":"ማትሪክስ",
+   "Santa Fe":"ሳንታ ፈ",
+   "Sonata":"ሶናታ",
+   "Terracan":"ቴራካን",
+   "Trajet":"ትራጀት",
+   "Tucson":"ቱክሰን",
+   "Veloster":"ቬሎስተር",
+   "AMG models":"ሞዴላት ኤኤምጂ",
+   "B class":"ቢ ክላስ",
+   "C class":"ሲ ክላስ",
+   "Citan":"ሲታን",
+   "CL":"ሲኤል",
+   "CLA":"ሲኤልኤ",
+   "CLC":"ሲኤልሲ",
+   "CLK":"ሲኤልከይ",
+   "CLS":"ሲኤልኤስ",
+   "E-class":"ኢ-ክላስ",
+   "EQA":"ኢኪውአይ",
+   "EQB":"ኢኪውቢ",
+   "EQC":"ኢኪውሲ",
+   "EQE":"ኢኪውኢ",
+   "EQS":"ኢኪውኤስ",
+   "EQV":"ኢኪውቪ",
+   "eVito":"ኢቪቶ",
+   "G-Klass":"ግ-ክላስ",
+   "GL":"ጂኤል",
+   "GLA":"ጂኤልኤ",
+   "GLB":"ጂኤልቢ",
+   "GLC":"ጂኤልሲ",
+   "GLE":"ጂኤልኢ",
+   "GLK":"ጂኤልከይ",
+   "ML":"ኤምኤል",
+   "R-klass":"ኣርክላስ",
+   "S-klass":"ስ-ክላስ",
+   "SL":"ኤስ.ኤል",
+   "SLC":"ኤስ.ኤል.ሲ",
+   "SLK":"ኤሰኤልከይ",
+   "SLS":"ኤስ.ኤል.ኤስ",
+   "sprinter":"ስፕሪንተር",
+   "T":"ቲ",
+   "V class":"ቪ ክላስ",
+   "X class":"ኤክስ ክላስ",
+   "200 SX":"200 ኤስኤክስ",
+   "300 ZX":"300 ዜድኤክስ",
+   "370 Z":"370 ዚ",
+   "Almera":"ኣልመራ",
+   "Ariya":"ኣርያ",
+   "e-NV200":"ኢ-ኤንቪ200",
+   "GT-R":"GT-R",
+   "Interstar":"ኢንተርስታር",
+   "Juke":"ጁክ",
+   "Navara":"ናቫራ",
+   "Cubists":"ኪዩቢስት",
+   "Leaf":"ሊፍ",
+   "Maxima":"ማክሲማ",
+   "Micra":"ሚክራ",
+   "Murano":"ሙራኖ",
+   "Note":"Note",
+   "NV200":"ኤንቪ200",
+   "NV250":"ኤንቪ250",
+   "NV300":"ኤንቪ300",
+   "NV400":"ኤንቪ400",
+   "Pathfinder":"ፓዝፋይንደር",
+   "Patrol":"ፓትሮል",
+   "primastar":"ፕሪማስታር",
+   "Primera":"ፕራይሜራ",
+   "pulses":"ፐልዝስ",
+   "Qashqai":"ቃሽቃይ",
+   "Sunny":"ሳኒ",
+   "Terrano":"ቴራኖ",
+   "Titanium":"ታይታንየም",
+   "Townstar":"ታውንስታር",
+   "X Trail":"ኤክስ ትረይል",
+   "Alto":"ኣልቶ",
+   "Baleno":"ባሌኖ",
+   "Grand Vitara":"ግራንድ ቪታራ",
+   "Ignis":"ኢግኒስ",
+   "Jimny":"ጂምኒ",
+   "Kizashi":"ኪዛሺ",
+   "Liana":"ሊያና",
+   "S-Cross":"ኤስ ክሮስ",
+   "Splash":"ስፕላሽ",
+   "Swace":"ስዋስ",
+   "Swift":"ስዊፍት",
+   "SX4":"ኤሰኤክስፎር",
+   "Vitaire":"ቪታር",
+   "Wagon R +":"ዋገን ኣር +",
+   "addppostedsuccessfully":"ማስታወቅያ ብዓወት ተለጢፉ",
+   "roomcreatedsuccessfully":"ክፍሊ ብዓወት ተፈጢሩ",
+"Profile": "ፕሮፋይል",
+ "My Adds": "ናተይ ማስታወቅያ",
+ "Change Password": "ፓስዎርድ ምቕያር",
+ "Logout": "ምውጻእ",
+ "Delete Account": "ኣካውንት ምጥፋእ",
+ "Are you sure to delete your account": "ኣካውንትካ ከም እትድምስሶ ርግጸኛ ዲኻ",
+ "Deleting an account will remove all your data from  ezana ": "ካውንት ምድምሳስ ኩሉ ዳታኻ ካብ ኢዛና ከውገድ እዩ",
+ "ok": "ሕራይ",
+ "cancel": "ስርዝ",
+ "Changeyourpassword": "መሕለፊ ቃልካ ቀይር",
+ "currentpassword": "ናይ ሕጂ መሕለፊ ቃል",
+ "entervalidpassword": "ትክክለኛ ምልክት ቃል ኣእቱ",
+ "newpassword": "ሓድሽ መሕለፊ ቃል",
+ "reenterpassword": "መሕለፊ ቃል ዳግማይ አእትው",
+"passworddontmatch":"መሕለፊ ቃል ኣይሰማማዕን",
+"passwordchangedsuccessfully":"መሕለፊ ቃል ብዓወት ተቐይሩ",
+"an error occured during password change":"ኣብ እዋን ምቕያር መሕለፊ ቃል ጌጋ ኣጋጢሙ",
+"changepassword":"መሕለፊ ቃል ምቕያር",
+"live":"live",
+"logintoviewyouradd":"ማስታወቅያ ንምርኣይ እቶ",
+"logintoviewyourfavoutite": "ዝፈተውዎ ማስታወቅያ ንምርኣይ ይእትዉ",
+"logintoviewyourprofile": "ኣካውንቶም ንምርኣይ ይእትዉ ",
+"noaddsyet":"ክሳብ ሕጂ ተወሳኺ ማስታወቅያ የለን",
+"Error occured":"ጌጋ ኣጋጢሙ",
+"Retry again":"ደጊምካ ፈትኖ",
+"updateanadd":"ማስታወቅያ ኣዘምን",
+"Add Updated Successfully":"ብዓወት ዝተመሓየሸ ማስተወቅያ",
+"updateadd":"ማስታወቅያ ኣዘምን",
+"Payment Processed":"ክፍሊት ተሰሪሑ",
+"Congrats":"እንቋዕ ሓጎሰካ",
+"Advertisement is now live ":"ማስታወቅያ  ብዝግባእ ተለጢፉ ",
+"Activating your advertisement ":"ማስታወቅያ እናተለጠፈ እዩ  ",
+"moreitemsby": "ተወሳኪ ካብ",
+"noadd yet": "ክሳብ ሕጂ ማስታወቅያ የለን",
+"Redirecting": "ናብ ክፍሊት",
+"payment tobemade": "ክግበር ዘለዎ ክፍሊት",
+"New Ads": "ሓድሽ",
+"in":"ኣብ"
+
 }
