--- a/assets/translations/en-KE.json
+++ b/assets/translations/en-KE.json
@@ -52,12 +52,10 @@
     "logintocontinue": "Itti Fufuudhaaf Galmaa!",
     "signuptocontinue": "Itti fufuuf Galmaa'i!",
     "getstarted": "Jalqaba",
-    "buytomillions": "Meesha barbaaddan kamiyyuu miliyoonaan bitadhaa gurguraa.",
-    "welcomeemssage": "Baga gara appii Ezana Ecommerce dhufte",
     "title": "baga nagaan dhufte obboleessa",
     "chatscreen": "Iskiriinii marii",
     "profile": "Profaayila",
-    "chats": "Chats",
+    "chats": "Chaatiiwwan",
     "favourite": "Jaalatamtoota",
     "home": "mana",
     "skip": "Daluu",
@@ -141,7 +139,7 @@
     "Enter min price": "Gatii xiqqaa galchi",
     "Enter your price below": "Gatii keessan armaan gaditti galchaa",
     "Done": "Raawwatame",
-    "Adds not found": "Dabala hin argamne",
+    "Adds not found": "Beeksisni hin argamne",
     "Reset filter": "Filtara irra deebi'ii saagi",
     "payment failed please retry again": "kaffaltiin hin milkoofne maaloo irra deebi'ii yaali",
     "Connectivity Issue": "Dhimma Walitti Hidhamiinsaa",
@@ -151,7 +149,7 @@
     "Change add status": "Haala ida'uu jijjiiri",
     "Older": "Durgaa",
     "Newer": "Haaraa",
-    "addsuccessfullyaddedtofavourites": "favourites irratti milkaa'inaan dabalame",
+    "addsuccessfullyaddedtofavourites": "jaalatamtoota irratti milkaa'inaan dabalame",
     "germansphepherd": "german sphepherd",
     "siverianhusky": "siverian husky",
     "americanpitbullterrior": "amercan pitbull terrior",
@@ -315,7 +313,7 @@
     "smartwatches": "sa'aatii ismaartii",
     "mobileaccessory": "gargaarsa moobaayilaa",
     "ware house": "mana meeshaalee",
-    "complex": "complex",
+    "complex": "kompileeksii",
     "restaurant": "mana nyaataa",
     "villa": "viilaa",
     "officespace": "bakka waajjira",
@@ -391,7 +389,7 @@
     "Yserh": "",
     "Automatic": "ofumaan",
     "CVT": "CVT",
-    "Manual": "Manual",
+    "Manual": "Kan harkaanii",
     "1.0-1,2 Litre engine": "Motora Liitira 1.0-1,2",
     "1.4-1.6 Lite engine": "Motora Liitira 1.4-1.6",
     "1.8-2.0 Litre engine": "Motora Liitira 1.8-2.0 ",
@@ -453,5 +451,253 @@
     "Harar":"Harar",
     "Addis":"Addis",
     "South":"Kibbaa",
-    "Afar":"Afaar"
+    "Afar":"Afaar",
+    "Posted by":"Maxxanfame",
+    "More details":"Bal'ina dabalataa",
+    "category":"gosa",
+    "Model":"Moodeela",
+    "transmission":"dabarsuu",
+    "engineSize":"anga motoraa",
+    "Fuel":"Boba'aa",
+    "Mile Age":"Umurii Maayilii",
+    "color":"halluu",
+    "Manifacturing year":"Bara omishaa",
+    "Gallery":"Gaalarii",
+    "images":"fakkii",
+    "villa":"viilaa",
+    "apartment":"apartment",
+    "Change add status":"Haala ida'uu jijjiiri",
+    "Brand":"Maqaa",
+    "Manifacturingyear":"Bara omishaa",
+    "pleaseentercolor":"maaloo halluu galchi",
+    "pleaseenteryear":"mee bara galchi",
+    "pleaseenterbrand":"maaloo maqaa galchaa",
+    "Model":"Moodeela",
+    "year":"bara",
+    "color":"halluu",
+    "Grey":"Halluu diimaa",
+    "Black":"Gurraacha",
+    "White":"Adii",
+    "Blue":"Blue",
+    "Red":"Diimaa",
+    "Silver":"Meetii",
+    "Green":"Magariisa",
+    "Orange":"Burtukaana",
+    "Yellow":"Keelloo",
+    "toyota":"tooyootaa",
+    "Avensis":"Avensis",
+    "Aygo":"Aygo",
+    "bZ4X":"bZ4X",
+    "C-HR":"C-HR",
+    "Camry":"Kaamrii",
+    "Carina":"Kaariinaa",
+    "Celica":"Seeliikaa",
+    "Corolla":"Koroolaa",
+    "GT86":"GT86",
+    "Hiace":"Hiace",
+    "Hilux":"Hilux",
+    "IQ":"IQ",
+    "Land Cruiser Series":"Lafa Kiruuzarii Tari",
+    "MR2":"MR2",
+    "Previa":"Previa",
+    "Prius":"Prius",
+    "Prius +":"Prius +",
+    "Proace":"Proace",
+    "RAV4":"RAV4",
+    "Starlet":"Starlet",
+    "Supra":"Supra",
+    "Tundra":"Tundraa",
+    "Urban Cruiser":"Urban Cruiser",
+    "Verso":"Verso",
+    "Verso-S":"Verso-S",
+    "Yaris":"Yaaris",
+    "Other":"Kanneen biroo",
+    "Amarok":"Amarok",
+    "Arteon":"Arteon",
+    "Beetle":"Beetle",
+    "Bora":"Booraa",
+    "bubble":"bubble",
+    "Caddy":"Kaadi",
+    "California":"Kaalifoorniyaa",
+    "CC":"CC",
+    "Corrado":"Koraadoo",
+    "Crafter":"Crafter",
+    "E-crafter":"E-crafter",
+    "e-UP":"e-UP",
+    "Eos":"Eos",
+    "Fox":"Fox",
+    "Golf":"Goolfii",
+    "ID.3":"ID.3",
+    "ID.4":"ID.4",
+    "ID.5":"ID.5",
+    "ID Buzz":"ID Buzz",
+    "Jetta":"Jeetta",
+    "Lupo":"Lupoo",
+    "Passed":"Passed",
+    "Phaeton":"Feetoon",
+    "Polo":"Poloo",
+    "Scirocco":"Scirookoo",
+    "Sharan":"Sharan",
+    "T-Cross":"T-Cross",
+    "T-Roc":"T-Roc",
+    "T5":"T5",
+    "T6":"T6",
+    "Taigo":"Taayigoo",
+    "Tiguan":"Tiguan",
+    "Tiguan Allspace":"Tiguan Allspace",
+    "Touareg":"Touareg",
+    "Touran":"Touran",
+    "Caravelle":"Kaaraaveel",
+    "Up":"Up",
+    "Vento":"Vento",
+    "Other":"Other",
+    "Accent":"Accent",
+    "Atos":"Atoos",
+    "Bayon":"Baayoon",
+    "Coupé":"Kuupee",
+    "Elantra":"Elantra",
+    "Getz":"Getz",
+    "Grandeur":"Grandeur",
+    "H-1":"H-1",
+    "i10":"i10",
+    "i20":"i20",
+    "i30":"i30",
+    "i40":"i40",
+    "Ioniq":"Iyooniq",
+    "Ioniq 5":"Iyooniq 5",
+    "ix20":"ix20",
+    "ix35":"ix35",
+    "Kona":"Konaa",
+    "Matrix":"Maatiriksii",
+    "Santa Fe":"Santa Fe",
+    "Sonata":"Sonata",
+    "Terracan":"Teerakaan",
+    "Trajet":"Tiraajeetii",
+    "Tucson":"Tuksan",
+    "Veloster":"Veloster",
+    "Other":"Other",
+    "AMG models":"Moodeelota AMG",
+    "B class":"Gta B",
+    "C class":"Gita C",
+    "Citan":"Citaan",
+    "CL":"CL",
+    "CLA":"CLA",
+    "CLC":"CLC",
+    "CLK":"CLK",
+    "CLS":"CLS",
+    "E-class":"E-gita",
+    "EQA":"EQA",
+    "EQB":"EQB",
+    "EQC":"EQC",
+    "EQE":"EQE",
+    "EQS":"EQS",
+    "EQV":"EQV",
+    "eVito":"eVito",
+    "G-Klass":"G-Klass",
+    "GL":"GL",
+    "GLA":"GLA",
+    "GLB":"GLB",
+    "GLC":"GLC",
+    "GLE":"GLE",
+    "GLK":"GLK",
+    "ML":"ML",
+    "R-klass":"R-klass",
+    "S-klass":"S-klass",
+    "SL":"SL",
+    "SLC":"SLC",
+    "SLK":"SLK",
+    "SLS":"SLS",
+    "sprinter":"sprinter",
+    "T":"T",
+    "V class":"Gita V",
+    "X class":"Gita X",
+    "200 SX":"200 SX",
+    "300 ZX":"300 ZX",
+    "370 Z":"370 Z",
+    "Almera":"Almeraa",
+    "Ariya":"Ariyaa",
+    "e-NV200":"e-NV200",
+    "GT-R":"GT-R",
+    "Interstar":"Interstar",
+    "Juke":"Juke",
+    "Navara":"Naavaaraa",
+    "Cubists":"Kuubiistota",
+    "Leaf":"Leaf",
+    "Maxima":"Maxima",
+    "Micra":"Micra",
+    "Murano":"Muraanoo",
+    "Note":"Note",
+    "NV200":"NV200",
+    "NV250":"NV250",
+    "NV300":"NV300",
+    "NV400":"NV400",
+    "Pathfinder":"Pathfinder",
+    "Patrol":"Paatroolii",
+    "primastar":"primastar",
+    "Primera":"Primera",
+    "pulses":"pulses",
+    "Qashqai":"Qashqaayi",
+    "Sunny":"Sunny",
+    "Terrano":"Teeraano",
+    "Titanium":"Titaaniyaamii",
+    "Townstar":"Townstar",
+    "X Trail":"X Trail",
+    "Alto":"Altoo",
+    "Baleno":"Baaleeno",
+    "Grand Vitara":"Grand Vitara",
+    "Ignis":"Ignis",
+    "Jimny":"Jimny",
+    "Kizashi":"Kizaashi",
+    "Liana":"Liyaanaa",
+    "S-Cross":"S-Cross",
+    "Splash":"Splash",
+    "Swace":"Swace",
+    "Swift":"Swift",
+    "SX4":"SX4",
+    "Vitaire":"Vitaayira",
+    "Wagon R +":"Wagon R +",
+    "addppostedsuccessfully":"beeksisa milkaa'inaan maxxanfame",
+    "roomcreatedsuccessfully":"kutaa milkaa’inaan uumame",
+"Profile": "Profaayila",
+ "My Adds": "Beeksisa Koo",
+ "Change Password": "Jecha Darbii Jijjiiri",
+ "Logout": "Ba'uu",
+ "Delete Account": "Akkaawuntii Haquu",
+ "Are you sure to delete your account": "Akkaawuntii kee haquu kee mirkaneeffatteettaa",
+ "Deleting an account will remove all your data from  ezana ": "Akkaawuntii haquun deetaa kee hunda ezana irraa ni haqa",
+ "ok": "tole",
+ "cancel": "haquu",
+ "Changeyourpassword": "ijjiira icciitii kee jijjiiri",
+ "currentpassword": "jecha icciitii ammaa",
+ "entervalidpassword": "jecha icciitii sirrii galchi",
+ "newpassword": "jecha icciitii haaraa",
+ "entervalidpassword": "jecha icciitii sirrii galchi",
+ "reenterpassword": "jecha icciitii irra deebi'ii galchi",
+"entervalidpassword":"jecha icciitii sirrii galchi",
+"passworddontmatch":"jechi icciitii wal hin simne",
+"passwordchangedsuccessfully":"jechi icciitii milkaa'inaan jijjiirame",
+"an error occured during password change":"dogongorri yeroo jijjiirraa jecha icciitii uumame",
+"changepassword":"jecha icciitii jijjiiri",
+"live":"jiraachuu",
+"logintoviewyouradd":"dabala kee ilaaluuf seeni",
+"My Adds":"Beeksisa Koo",
+"noaddsyet":"hanga ammaatti Beeksisni hin jiru",
+"Error occured":"Dogongorri uumame",
+"Retry again":"Irra deebi'ii yaali",
+"buytomillions": "Meesha barbaaddan kamiyyuu miliyoonaan bitadhaa gurguraa",
+"welcomeemssage": "Baga gara appii Ezana Ecommerce dhuftan",
+"Filter":"barbaaduu",
+"updateanadd":"beeksisa haaromsi",
+"Add Updated Successfully":"Beeksisa Milkaa'inaan Fooyyeffame",
+"updateadd":"Beeksisa haaromsuu",
+"Payment Processed":"Kaffaltiin Adeemsifame",
+"Congrats":"Baga gammaddan",
+"Advertisement is now live ":"Beeksisni amma kallattiin",
+"Activating your advertisement ":"Beeksisa kee sochoosuu ",
+"moreitemsby": "Kana caalaa",
+"noadd yet": "Hanga ammaatti addvertizement hin jiru",
+"Redirecting": "ወደ ክፍያ",
+"payment tobemade": "ክፍያ ይደረጋል",
+"New Ads": "ኣዲስ",
+"in":"keessa"
 }
