--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -52,8 +52,6 @@
     "logintocontinue": "Log In To Continue!",
     "signuptocontinue": "Sign Up To Continue!",
     "getstarted": "Get Started",
-    "buytomillions": "Buy and sell any item you want to millions.",
-    "welcomeemssage": "Welcome to Ezana Ecommerce app",
     "title": "welcome home brother",
     "chatscreen": "Chat Screen",
     "profile": "Profile",
@@ -273,7 +271,7 @@
     "mirrors": "mirrors",
     "freezers": "freezers",
     "clocks": "clocks",
-    "refrigerators": "refrigerators",  
+    "refrigerators": "refrigerators",
     "blenders": "blenders",
     "water dispensers": "water dispensers",
     "cookers": "cookers",
@@ -428,35 +426,278 @@
     "Region": "Region",
     "Status": "Status",
     "filter by": "filter by",
-    "birr":"birr",
-    "Mekele":"Mekele",
-    "Axum":"Axum",
-    "Adigrat":"Adigrat",
-    "Adwa":"Adwa",
-    "Shire":"Shire",
-    "BahirDar":"BahirDar",
-    "Gonder":"Gonder",
-    "Dessye":"Dessye",
-    "Kombolcha":"Kombolcha",
-    "DebreBirhan":"DebreBirhan",
-    "Jimma":"Jimma",
-    "Nazreth":"Nazreth",
-    "Shashamanni":"Shashamanni",
-    "Bishoftu":"Bishoftu",
-    "Nekemte":"Nekemte",
-    "Hawassa":"Hawassa",
-    "Arba":"Arba",
-    "Sodo":"Sodo",
-    "Dire":"Dire",
-    "Jijiga":"Jijiga",
-    "Semera":"Semera",
-    "Harar":"Harar",
-    "Addis":"Addis",
-    "South":"South",
-    "Afar":"Afar"
+    "birr": "birr",
+    "Mekele": "Mekele",
+    "Axum": "Axum",
+    "Adigrat": "Adigrat",
+    "Adwa": "Adwa",
+    "Shire": "Shire",
+    "BahirDar": "BahirDar",
+    "Gonder": "Gonder",
+    "Dessye": "Dessye",
+    "Kombolcha": "Kombolcha",
+    "DebreBirhan": "DebreBirhan",
+    "Jimma": "Jimma",
+    "Nazreth": "Nazreth",
+    "Shashamanni": "Shashamanni",
+    "Bishoftu": "Bishoftu",
+    "Nekemte": "Nekemte",
+    "Hawassa": "Hawassa",
+    "Arba": "Arba",
+    "Sodo": "Sodo",
+    "Dire": "Dire",
+    "Jijiga": "Jijiga",
+    "Semera": "Semera",
+    "Harar": "Harar",
+    "Addis": "Addis",
+    "South": "South",
+    "Afar": "Afar",
+    "Posted by": "Posted by",
+    "More details": "More details",
+    "category": "category",
+    "Model": "Model",
+    "transmission": "transmission",
+    "engineSize": "engineSize",
+    "Fuel": "Fuel",
+    "Mile Age": "Mile Age",
+    "color": "color",
+    "Manifacturing year": "Manifacturing year",
+    "Gallery": "Gallery",
+    "images": "images",
+    "villa": "villa",
+    "apartment": "apartment",
+    "Change add status": "Change add status",
+    "Brand": "Brand",
+    "Manifacturingyear": "Manifacturing year",
+    "pleaseentercolor": "please enter color",
+    "pleaseenteryear": "please enter year",
+    "pleaseenterbrand": "please enter brand",
+    "Model": "Model",
+    "year": "year",
+    "color": "color",
+    "Grey": "Grey",
+    "Black": "Black",
+    "White": "White",
+    "Blue": "Blue",
+    "Red": "Red",
+    "Silver": "Silver",
+    "Green": "Green",
+    "Orange": "Orange",
+    "Yellow": "Yellow",
+    "toyota": "toyota",
+    "Avensis": "Avensis",
+    "Aygo": "Aygo",
+    "bZ4X": "bZ4X",
+    "C-HR": "C-HR",
+    "Camry": "Camry",
+    "Carina": "Carina",
+    "Celica": "Celica",
+    "Corolla": "Corolla",
+    "GT86": "GT86",
+    "Hiace": "Hiace",
+    "Hilux": "Hilux",
+    "IQ": "IQ",
+    "Land Cruiser Series": "Land Cruiser Series",
+    "MR2": "MR2",
+    "Previa": "Previa",
+    "Prius": "Prius",
+    "Prius +": "Prius +",
+    "Proace": "Proace",
+    "RAV4": "RAV4",
+    "Starlet": "Starlet",
+    "Supra": "Supra",
+    "Tundra": "Tundra",
+    "Urban Cruiser": "Urban Cruiser",
+    "Verso": "Verso",
+    "Verso-S": "Verso-S",
+    "Yaris": "Yaris",
+    "Other": "Other",
+    "Amarok": "Amarok",
+    "Arteon": "Arteon",
+    "Beetle": "Beetle",
+    "Bora": "Bora",
+    "bubble": "bubble",
+    "Caddy": "Caddy",
+    "California": "California",
+    "CC": "CC",
+    "Corrado": "Corrado",
+    "Crafter": "Crafter",
+    "E-crafter": "E-crafter",
+    "e-UP": "e-UP",
+    "Eos": "Eos",
+    "Fox": "Fox",
+    "Golf": "Golf",
+    "ID.3": "ID.3",
+    "ID.4": "ID.4",
+    "ID.5": "ID.5",
+    "ID Buzz": "ID Buzz",
+    "Jetta": "Jetta",
+    "Lupo": "Lupo",
+    "Passed": "Passed",
+    "Phaeton": "Phaeton",
+    "Polo": "Polo",
+    "Scirocco": "Scirocco",
+    "Sharan": "Sharan",
+    "T-Cross": "T-Cross",
+    "T-Roc": "T-Roc",
+    "T5": "T5",
+    "T6": "T6",
+    "Taigo": "Taigo",
+    "Tiguan": "Tiguan",
+    "Tiguan Allspace": "Tiguan Allspace",
+    "Touareg": "Touareg",
+    "Touran": "Touran",
+    "Caravelle": "Caravelle",
+    "Up": "Up",
+    "Vento": "Vento",
+    "Other": "Other",
+    "Accent": "Accent",
+    "Atos": "Atos",
+    "Bayon": "Bayon",
+    "Coupé": "Coupé",
+    "Elantra": "Elantra",
+    "Getz": "Getz",
+    "Grandeur": "Grandeur",
+    "H-1": "H-1",
+    "i10": "i10",
+    "i20": "i20",
+    "i30": "i30",
+    "i40": "i40",
+    "Ioniq": "Ioniq",
+    "Ioniq 5": "Ioniq 5",
+    "ix20": "ix20",
+    "ix35": "ix35",
+    "Kona": "Kona",
+    "Matrix": "Matrix",
+    "Santa Fe": "Santa Fe",
+    "Sonata": "Sonata",
+    "Terracan": "Terracan",
+    "Trajet": "Trajet",
+    "Tucson": "Tucson",
+    "Veloster": "Veloster",
+    "Other": "Other",
+    "AMG models": "AMG models",
+    "B class": "B classv",
+    "C class": "C class",
+    "Citan": "Citan",
+    "CL": "CL",
+    "CLA": "CLA",
+    "CLC": "CLC",
+    "CLK": "CLK",
+    "CLS": "CLS",
+    "E-class": "E-class",
+    "EQA": "EQA",
+    "EQB": "EQB",
+    "EQC": "EQC",
+    "EQE": "EQE",
+    "EQS": "EQS",
+    "EQV": "EQV",
+    "eVito": "eVito",
+    "G-Klass": "G-Klass",
+    "GL": "GL",
+    "GLA": "GLA",
+    "GLB": "GLB",
+    "GLC": "GLC",
+    "GLE": "GLE",
+    "GLK": "GLK",
+    "ML": "ML",
+    "R-klass": "R-klass",
+    "S-klass": "S-klass",
+    "SL": "SL",
+    "SLC": "SLC",
+    "SLK": "SLK",
+    "SLS": "SLS",
+    "sprinter": "sprinter",
+    "T": "T",
+    "V class": "V class",
+    "X class": "X class",
+    "200 SX": "200 SX",
+    "300 ZX": "300 ZX",
+    "370 Z": "370 Z",
+    "Almera": "Almera",
+    "Ariya": "Ariya",
+    "e-NV200": "e-NV200",
+    "GT-R": "GT-R",
+    "Interstar": "Interstar",
+    "Juke": "Juke",
+    "Navara": "Navara",
+    "Cubists": "Cubists",
+    "Leaf": "Leaf",
+    "Maxima": "Maxima",
+    "Micra": "Micra",
+    "Murano": "Murano",
+    "Note": "Note",
+    "NV200": "NV200",
+    "NV250": "NV250",
+    "NV300": "NV300",
+    "NV400": "NV400",
+    "Pathfinder": "Pathfinder",
+    "Patrol": "Patrol",
+    "primastar": "primastar",
+    "Primera": "Primera",
+    "pulses": "pulses",
+    "Qashqai": "Qashqai",
+    "Sunny": "Sunny",
+    "Terrano": "Terrano",
+    "Titanium": "Titanium",
+    "Townstar": "Townstar",
+    "X Trail": "X Trail",
+    "Alto": "Alto",
+    "Baleno": "Baleno",
+    "Grand Vitara": "Grand Vitara",
+    "Ignis": "Ignis",
+    "Jimny": "Jimny",
+    "Kizashi": "Kizashi",
+    "Liana": "Liana",
+    "S-Cross": "S-Cross",
+    "Splash": "Splash",
+    "Swace": "Swace",
+    "Swift": "Swift",
+    "SX4": "SX4",
+    "Vitaire": "Vitaire",
+    "Wagon R +": "Wagon R +",
+    "addppostedsuccessfully": "add posted successfully",
+    "roomcreatedsuccessfully": "room created successfully",
+    "Profile": "Profile",
+    "My Adds": "My Adds",
+    "Change Password": "Change Password",
+    "Logout": "Logout",
+    "Delete Account": "Delete Account",
+    "Are you sure to delete your account": "Are you sure to delete your account",
+    "Deleting an account will remove all your data from  ezana ": "Deleting an account will remove all your data from  ezana ",
+    "ok": "ok",
+    "cancel": "cancel",
+    "Changeyourpassword": "Change your password",
+    "currentpassword": "current password",
+    "entervalidpassword": "enter valid password",
+    "newpassword": "new password",
+    "entervalidpassword": "enter valid password",
+    "reenterpassword": "reenter password",
+    "entervalidpassword": "enter valid password",
+    "passworddontmatch": "password don't match",
+    "passwordchangedsuccessfully": "password changed successfully",
+    "an error occured during password change": "an error occured during password change",
+    "changepassword": "change password",
+    "live": "live",
+    "logintoviewyouradd": "login to view your add",
+    "My Adds": "My Adds",
+    "noaddsyet": "no adds yet",
+    "Error occured": "Error occured",
+    "Retry again": "Retry again",
+    "buytomillions": "Buy and sell any item you want to millions.",
+    "welcomeemssage": "Welcome to Ezana Ecommerce app",
+    "updateanadd": "update an addvertisement",
+    "enterdetailsoftheapp": "enter details of the app",
+    "Add Updated Successfully": "Add Updated Successfully",
+    "updateadd": "update Add",
+    "Payment Processed": "Payment Processed",
+    "Congrats": "Congrats",
+    "Advertisement is now live ": "Advertisement is now live ",
+    "Activating your advertisement ": "Activating your advertisement ",
+    "moreitemsby": "more items by",
+    "noadd yet": "No Adds yet",
+    "Redirecting": "Redirecting",
+    "payment tobemade": "payment to be made",
+    "New Ads": "New",
+    "in" :" in"
 }
-
-
-
-
-
