--- a/assets/translations/am-ET.json
+++ b/assets/translations/am-ET.json
@@ -455,6 +455,241 @@
     "Harar":"ሀረር",
     "Addis":"ኣዲስ",
     "South":"ደቡብ",
-    "Afar":"ዐፋር"
+    "Afar":"ዐፋር",
+    "Posted by":"የተለጠፈው",
+    "More details":"ተጨማሪ ዝርዝሮች",
+    "Fuel":"ነዳዲ",
+    "Mile Age":"ማይል ዘመን",
+    "color":"ቀለም",
+    "Manifacturing year":"የምርት ዓመት",
+    "Gallery":"ጋለሪ",
+    "images":"ምስሎች",
+    "Change add status":"የማስታወቅያ ሁኔታን ቀይር",
+    "Brand":"ብራንድ",
+    "Manifacturingyear":"የምርት ዓመት",
+    "pleaseentercolor":"እባክዎ ቀለም ያስገቡ",
+    "pleaseenteryear":"እባክዎ አመት አስገባ",
+    "pleaseenterbrand":"እባክዎ የምርት ስም ያስገቡ",
+    "Model":"ሞዴል",
+    "year":"ዓመት",
+    "Grey":"ግራጫ",
+    "Black":"ጥቁር",
+    "White":"ነጭ",
+    "Blue":"ሰማያዊ",
+    "Red":"ቀይ",
+    "Silver":"ብር",
+    "Green":"አረንጓዴ",
+    "Orange":"ብርቱካን",
+    "Yellow":"ቢጫ",
+    "Avensis":"አቬንሲስ",
+    "Aygo":"ኣይጎ",
+    "bZ4X":"bZ4X",
+    "C-HR":"ሲ-ኤችኣር",
+    "Camry":"ካምሪ",
+    "Carina":"ካሪና",
+    "Celica":"ሴሊካ",
+    "Corolla":"ኮሮላ",
+    "GT86":"GT86",
+    "Hiace":"ሃያሴ",
+    "Hilux":"ሃይሉክስ",
+    "IQ":"ኣይኪዩ",
+    "Land Cruiser Series":"ላንድ ክሩዘር",
+    "MR2":"MR2",
+    "Previa":"ፕሪቪያ",
+    "Prius":"ፕሪዩስ",
+    "Prius +":"ፕሪዩስ +",
+    "Proace":"ፕሮኣስ",
+    "RAV4":"RAV4",
+    "Starlet":"ስታርለት",
+    "Supra":"ሱፕራ",
+    "Tundra":"ቱንድራ",
+    "Urban Cruiser":"ኣርባን ክሩዘር",
+    "Verso":"ቨርሶ",
+    "Verso-S":"ቨርሶ-ኤስ",
+    "Yaris":"ያሪስ",
+    "Other":"ካልእ",
+    "Amarok":"ኣማሮክ",
+    "Arteon":"ኣርቴዮን",
+    "Beetle":"ቢትል",
+    "Bora":"ቦራ",
+    "bubble":"ባብል",
+    "Caddy":"ካዲ",
+    "California":"ካሊፎርንያ",
+    "CC":"CC",
+    "Corrado":"ኮራዶ",
+    "Crafter":"ክራፍት",
+    "E-crafter":"ኢ-ክራፍት",
+    "e-UP":"ኢ-ኣፕ",
+    "Eos":"ኢኦስ",
+    "Fox":"ጎልፍ",
+    "Golf":"ጎልፍ",
+    "ID.3":"ኣይዲ .3",
+    "ID.4":"ኣይዲ .4",
+    "ID.5":"ኣይዲ .5",
+    "ID Buzz":"ኣይዲ ቡዝ",
+    "Jetta":"ጀታ",
+    "Lupo":"ሉፖ",
+    "Passed":"ፓስድ",
+    "Phaeton":"ፌቶን",
+    "Polo":"ፖሎ",
+    "Scirocco":"ስኪሮኮ",
+    "Sharan":"ሻራን",
+    "T-Cross":"ቲክሮስ",
+    "T-Roc":"ቲ-ሮክ",
+    "T5":"ቲ5",
+    "T6":"ቲ6",
+    "Taigo":"ታይጎ",
+    "Tiguan":"ቲጉዋን",
+    "Tiguan Allspace":"ቲጉዋን ኦልስፔስ",
+    "Touareg":"ቱዋረግ",
+    "Touran":"ቱራን",
+    "Caravelle":"ካራቨል",
+    "Up":"ኣፕ",
+    "Vento":"ቬንቶ",
+    "Accent":"ኣክሰንት",
+    "Atos":"ኣቶስ",
+    "Bayon":"ባዮን",
+    "Coupé":"ኩፐ",
+    "Elantra":"ኤላንትራ",
+    "Getz":"ጌትዝ",
+    "Grandeur":"ግራንዱር",
+    "H-1":"ኤች-1",
+    "i10":"ኣይ10",
+    "i20":"ኣይ20",
+    "i30":"ኣይ30",
+    "i40":"ኣይ40",
+    "Ioniq":"ኢዮኒቅ",
+    "Ioniq 5":"ኢዮኒቅ 5",
+    "ix20":"ኣይኤክስ20",
+    "ix35":"ኣይኤክስ35",
+    "Kona":"ኮና",
+    "Matrix":"ማትሪክስ",
+    "Santa Fe":"ሳንታ ፈ",
+    "Sonata":"ሶናታ",
+    "Terracan":"ቴራካን",
+    "Trajet":"ትራጀት",
+    "Tucson":"ቱክሰን",
+    "Veloster":"ቬሎስተር",
+    "AMG models":"ሞዴላት ኤኤምጂ",
+    "B class":"ቢ ክላስ",
+    "C class":"ሲ ክላስ",
+    "Citan":"ሲታን",
+    "CL":"ሲኤል",
+    "CLA":"ሲኤልኤ",
+    "CLC":"ሲኤልሲ",
+    "CLK":"ሲኤልከይ",
+    "CLS":"ሲኤልኤስ",
+    "E-class":"ኢ-ክላስ",
+    "EQA":"ኢኪውአይ",
+    "EQB":"ኢኪውቢ",
+    "EQC":"ኢኪውሲ",
+    "EQE":"ኢኪውኢ",
+    "EQS":"ኢኪውኤስ",
+    "EQV":"ኢኪውቪ",
+    "eVito":"ኢቪቶ",
+    "G-Klass":"ግ-ክላስ",
+    "GL":"ጂኤል",
+    "GLA":"ጂኤልኤ",
+    "GLB":"ጂኤልቢ",
+    "GLC":"ጂኤልሲ",
+    "GLE":"ጂኤልኢ",
+    "GLK":"ጂኤልከይ",
+    "ML":"ኤምኤል",
+    "R-klass":"ኣርክላስ",
+    "S-klass":"ስ-ክላስ",
+    "SL":"ኤስ.ኤል",
+    "SLC":"ኤስ.ኤል.ሲ",
+    "SLK":"ኤሰኤልከይ",
+    "SLS":"ኤስ.ኤል.ኤስ",
+    "sprinter":"ስፕሪንተር",
+    "T":"ቲ",
+    "V class":"ቪ ክላስ",
+    "X class":"ኤክስ ክላስ",
+    "200 SX":"200 ኤስኤክስ",
+    "300 ZX":"300 ዜድኤክስ",
+    "370 Z":"370 ዚ",
+    "Almera":"ኣልመራ",
+    "Ariya":"ኣርያ",
+    "e-NV200":"ኢ-ኤንቪ200",
+    "GT-R":"GT-R",
+    "Interstar":"ኢንተርስታር",
+    "Juke":"ጁክ",
+    "Navara":"ናቫራ",
+    "Cubists":"ኪዩቢስት",
+    "Leaf":"ሊፍ",
+    "Maxima":"ማክሲማ",
+    "Micra":"ሚክራ",
+    "Murano":"ሙራኖ",
+    "Note":"Note",
+    "NV200":"ኤንቪ200",
+    "NV250":"ኤንቪ250",
+    "NV300":"ኤንቪ300",
+    "NV400":"ኤንቪ400",
+    "Pathfinder":"ፓዝፋይንደር",
+    "Patrol":"ፓትሮል",
+    "primastar":"ፕሪማስታር",
+    "Primera":"ፕራይሜራ",
+    "pulses":"ፐልዝስ",
+    "Qashqai":"ቃሽቃይ",
+    "Sunny":"ሳኒ",
+    "Terrano":"ቴራኖ",
+    "Titanium":"ታይታንየም",
+    "Townstar":"ታውንስታር",
+    "X Trail":"ኤክስ ትረይል",
+    "Alto":"ኣልቶ",
+    "Baleno":"ባሌኖ",
+    "Grand Vitara":"ግራንድ ቪታራ",
+    "Ignis":"ኢግኒስ",
+    "Jimny":"ጂምኒ",
+    "Kizashi":"ኪዛሺ",
+    "Liana":"ሊያና",
+    "S-Cross":"ኤስ ክሮስ",
+    "Splash":"ስፕላሽ",
+    "Swace":"ስዋስ",
+    "Swift":"ስዊፍት",
+    "SX4":"ኤሰኤክስፎር",
+    "Vitaire":"ቪታር",
+    "Wagon R +":"ዋገን ኣር +",
+    "addppostedsuccessfully":"ማስታወቂያ በተሳካ ሁኔታ ተለጠፈ",
+    "roomcreatedsuccessfully":"ክፍል በተሳካ ሁኔታ ተፈጥሯል",
+    "Profile": "መገለጫ",
+    "My Adds": "የእኔ ማስታወቂያ",
+    "Change Password": "የይለፍ ቃል ቀይር",
+    "Logout": "ውጣ",
+    "Delete Account": "መለያ ሰርዝ",
+    "Are you sure to delete your account": "መለያህን መሰረዝህን እርግጠኛ ነህ",
+    "Deleting an account will remove all your data from  ezana ": "መለያ መሰረዝ ሁሉንም ዳታህን ከኢዛና ያስወግዳል ",
+    "ok": "እሺ",
+    "cancel": "ሰርዝ",
+    "Changeyourpassword": "የይለፍ ቃልዎን ቀይር",
+    "currentpassword": "የአሁኑ የይለፍ ቃል",
+    "entervalidpassword": "የሚሰራ የይለፍ ቃል አስገባ",
+    "newpassword": "አዲስ የይለፍ ቃል",
+    "reenterpassword": "የይለፍ ቃል እንደገና አስገባ",
+    "entervalidpassword":"የሚሰራ የይለፍ ቃል አስገባ",
+    "passworddontmatch":"የይለፍ ቃል አይዛመድም",
+    "passwordchangedsuccessfully":"የይለፍ ቃል በተሳካ ሁኔታ ተቀይሯል",
+    "an error occured during password change":"የይለፍ ቃል ሲቀየር ስህተት ተፈጠረ",
+    "changepassword":"የይለፍ ቃል ቀይር",
+    "live":"ቀጥታ",
+    "logintoviewyouradd":"የእርስዎን ማስታወቂያ ለማየት ይግቡ",
+    "My Adds":"የእኔ ማስታወቂያ",
+    "noaddsyet":"ምንም ማስታወቂያ የለም",
+    "Error occured":"ስህተት ተፈጥሯል",
+    "Retry again":"እንደገና ሞክር",
+    "updateanadd":"ማስታወቂያ አዘምን",
+"Add Updated Successfully":"በተሳካ ሁኔታ ማስታወቂያ ተስተካክለዋል",
+"updateadd":"ማስታወቂያ አዘምን",
+"Payment Processed":"ክፍያ ተከናውኗል",
+"Congrats":"እንኳን ደስ አለዎት",
+"Advertisement is now live ":"ማስታወቂያው በተሳካ ተለጥፈዋል",
+"Activating your advertisement ":"ማስታወቂያህን በመለጠፍ ላይ",
+"moreitemsby": "ተጨማሪ ከ",
+"noadd yet": "እስካሁን ማስታወቅያ የለም",
+"Redirecting": "ወደ ክፍያ",
+"payment tobemade": "ክፍያ ይደረጋል",
+"New Ads": "ኣዲስ",
+"in":" በ"
+
 
 }
